@@ -1,5 +1,7 @@
+import AlipayIcon from './alipay';
 import CreditCardIcon from './cards';
 import GiropayIcon from './giropay';
+import MultibancoIcon from './multibanco';
 import SofortIcon from './sofort';
 import SepaIcon from './sepa';
 import EpsIcon from './eps';
@@ -10,14 +12,16 @@ import BoletoIcon from './boleto';
 import OxxoIcon from './oxxo';
 
 export default {
-	card: <CreditCardIcon />,
-	giropay: <GiropayIcon />,
-	sepa_debit: <SepaIcon />,
-	sofort: <SofortIcon />,
-	eps: <EpsIcon />,
-	bancontact: <BancontactIcon />,
-	ideal: <IdealIcon />,
-	p24: <P24Icon />,
-	boleto: <BoletoIcon />,
-	oxxo: <OxxoIcon />,
+	alipay: AlipayIcon,
+	card: CreditCardIcon,
+	giropay: GiropayIcon,
+	multibanco: MultibancoIcon,
+	sepa_debit: SepaIcon,
+	sofort: SofortIcon,
+	eps: EpsIcon,
+	bancontact: BancontactIcon,
+	ideal: IdealIcon,
+	p24: P24Icon,
+	boleto: BoletoIcon,
+	oxxo: OxxoIcon,
 };
